2014-10-02  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/tile/tilegx/string-endian.h (copy_byte): Optimize.

2014-10-06  Arjun Shankar  <arjun.is@lostca.se>

	* nptl/tst-setuid3.c: Write errors to stdout.

2014-10-01  Kostya Serebryany  <konstantin.s.serebryany@gmail.com>

	* elf/dl-deps.c
	(preload): New functions broken out of _dl_map_object_deps.
	(_dl_map_object_deps):  Remove a nested function. Update call sites.

2014-10-01  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14138]
	* sysdeps/unix/sysv/linux/execve.c: Remove file.
	* sysdeps/unix/sysv/linux/syscalls.list (execve): Add syscall.

2014-10-01  Steve Ellcey  <sellcey@mips.com>

	* sysdeps/mips/strcmp.S: New.

2014-09-30  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14138]
	* sysdeps/unix/sysv/linux/syscalls.list (fchownat): New syscall.
	(linkat): Likewise.
	(mkdirat): Likewise.
	(readlinkat): Likewise.
	(renameat): Likewise.
	(symlinkat): Likewise.
	(unlinkat): Likewise.
	* sysdeps/unix/sysv/linux/fchownat.c: Remove file.
	* sysdeps/unix/sysv/linux/linkat.c: Likewise.
	* sysdeps/unix/sysv/linux/mkdirat.c: Likewise.
	* sysdeps/unix/sysv/linux/readlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/renameat.c: Likewise.
	* sysdeps/unix/sysv/linux/symlinkat.c: Likewise.
	* sysdeps/unix/sysv/linux/unlinkat.c: Likewise.

2014-09-30  Will Newton  <will.newton@linaro.org>

	* math/math.h: Define long double math functions if
	_LIBC_TEST is defined.
	* stdlib/tst-strtod-round.c: Define _LIBC_TEST.

	* localedata/Makefile: Move assignment to tests-special
	into an ifdef testing run-built-tests.
	* timezone/Makefile: Likewise.

2014-09-29  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/x86/Makefile ($(objpfx)tst-ld-sse-use.out): Run script
	with $(BASH) not $(SHELL).

2014-09-29  Carlos O'Donell  <carlos@redhat.com>
	    Matthew LeGendre  <legendre1@llnl.gov>

	[BZ #17411]
	* elf/dl-reloc.c (_dl_relocate_object): Allocate correct amount for
	l_reloc_result.
