@@ -1,5 +1,10 @@
 2014-10-02  Chris Metcalf  <cmetcalf@tilera.com>
 
+	* sysdeps/tile/tilegx/string-endian.h (STRSHIFT): New macro.
+	* sysdeps/tile/tilegx/strcasestr.c: New file.
+	* sysdeps/tile/tilegx/strnlen.c: New file.
+	* sysdeps/tile/tilegx/strstr.c: New file.
+
 	* sysdeps/tile/tilegx/string-endian.h (copy_byte): Optimize.
 
 2014-10-06  Arjun Shankar  <arjun.is@lostca.se>
